# eda-google-playstore-review

./: eda-beamin.ipynb  eda-daangn.ipynb  eda-ddangyo.ipynb  main.py  pyproject.toml
data/: 구글플레이스토어_당근_리뷰.csv  구글플레이스토어_땡겨요_리뷰.csv  구글플레이스토어_땡겨요주문접수_리뷰.csv  구글플레이스토어_배달의민족_리뷰.csv  구글플레이스토어_배민사장님_리뷰.csv  구글플레이스토어_쿠팡이츠-배달앱_리뷰.csv
keyword_txt/: 당근-동네.txt  당근-지역.txt  당근-페이.txt  땡겨요-동네.txt  땡겨요-지역.txt  땡겨요-지역화폐.txt  땡겨요-페이.txt  배민-동네.txt  배민-지역.txt  배민-페이.txt  쿠팡이츠-동네.txt  쿠팡이츠-지역.txt  쿠팡이츠-페이.txt
